<?xml version="1.0"?>
<package>
  <name>jaws_description</name>
  <version>0.0.0</version>
  <description>The jaws_description package</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/jaws_description</url> -->

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
