<?xml version="1.0"?>
<package>
  <name>jaws_gazebo</name>
  <version>0.0.0</version>
  <description>The jaws_gazebo package</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/jaws_gazebo</url> -->

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roslaunch</run_depend>

  <export>
  </export>
</package>
