<?xml version="1.0"?>
<package>
  <name>jaws_joy</name>
  <version>0.0.0</version>
  <description>The jaws_joy package</description>

  <maintainer email="cary.42@osu.edu">conor</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/jaws_joy</url> -->

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
