<?xml version="1.0"?>
<package>
  <name>joy_turtlesim</name>
  <version>0.0.0</version>
  <description>The joy_turtlesim package</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/turtlejoy</url> -->

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>turtlesim</run_depend>

  <export>
  </export>
</package>
