<?xml version="1.0"?>
<package>
  <name>kinect_rviz</name>
  <version>0.0.0</version>
  <description>The kinect_rviz package</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/kinect_rviz</url> -->

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
