<?xml version="1.0"?>
<package>
  <name>learn_tf</name>
  <version>0.0.0</version>
  <description>The learn_tf package</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/jaws_tf</url> -->

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jaws_description</build_depend>
  <build_depend>learn_rviz</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>jaws_description</run_depend>
  <run_depend>learn_rviz</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
