<?xml version="1.0"?>
<package>
  <name>learn_webcam</name>
  <version>0.0.0</version>
  <description>The learn_webcam package</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/usb_view</url> -->

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_view</build_depend>
  <build_depend>usb_cam</build_depend>
  <run_depend>image_view</run_depend>
  <run_depend>usb_cam</run_depend>

  <export>
  </export>
</package>
